--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ regex = { version = "1.10.4" }
 # gui
 klask = { version = "1.0.0", optional = true, git="https://github.com/xosxos/klask.git"}
 colored = "2.1.0"
+
+[[bin]]
+name = "ms"
